--- a/src/app/moduleAdmin/component/header-dashboard/header-dashboard.component.html
+++ b/src/app/moduleAdmin/component/header-dashboard/header-dashboard.component.html
@@ -1,20 +1,37 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <div class="d-flex align-items-center">
+    <div class="d-flex ">
       <!-- Sidebar Toggle Button (Only visible on small screens) -->
       <button class="btn btn-outline-secondary sidebar-toggle me-2 border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar" aria-controls="sidebar">
         <img src="/assets/admin/assets/menu-8-2.svg" alt="burger menu">
       </button>
-      <img class="navbar-brand ms-5" src="/assets/admin/assets/logo/Logo%20JX-HIFI%20extern%20transparent.png" alt="logo compagnie">
+      <img class=" image-logo   ms-5" src="/assets/admin/assets/logo/Logo%20JX-HIFI%20extern%20transparent.png" alt="logo compagnie">
       <!-- Search Form -->
-      <form class=" d-sm-flex form-search" role="search">
+      <form class="d-sm-flex  form-search flex-column" role="search" (ngSubmit)="onSearch()">
+        <!-- Input Group for the Search Field -->
         <div class="input-group">
-          <span class="input-group-text"><img src="/assets/admin/assets/svgIcon/search.svg" alt="search" height="16"
-                                              width="16"></span>
-          <input class="form-control ms-auto" type="search" placeholder="Recherche de Produit" aria-label="Recherche">
+    <span class="input-group-text">
+      <img src="/assets/admin/assets/svgIcon/search.svg" alt="search" height="16" width="16">
+    </span>
+          <input
+            class="form-control ms-auto search-field"
+            placeholder="Recherche de Produit"
+            aria-label="Recherche"
+            [(ngModel)]="searchQuery"
+            (input)="filterProducts(searchQuery, 0)"
+            name="searchQuery"
+          >
         </div>
+
+        <!-- Dropdown on a New Row -->
+        <ul class="autocomplete-dropdown mt-2" *ngIf="filteredProducts.length > 0 && activeIndex === 0&& searchQuery.length > 0">
+          <li *ngFor="let product of filteredProducts" (click)="selectProduct(product)">
+            {{ product.name }} (ID: {{ product.id }})
+          </li>
+        </ul>
       </form>
     </div>
 
   </div>
+
 </nav>
