--- a/src/app/moduleAdmin/style-admin.css
+++ b/src/app/moduleAdmin/style-admin.css
@@ -8,15 +8,22 @@
 .navbar {
   background-color: white;
   padding: 0.5rem 1rem;
-  height: 120px;
+  height: 190px;
 }
-
+.image-logo{
+  margin-top: 4.2rem;
+  width: 150px;
+  height: 100px;
+}
 .form-search {
-  height: 4.25rem;
+margin-top: 6rem;
+  height: 190px;
   margin-left: 15em;
   width: 25rem;
 }
-
+.search-field{
+  height: 50px;
+}
 .input-group-text {
   border: none;
   background-color: #F2F4FA;
@@ -173,4 +180,24 @@
     display: inline-block !important;
   }
 }
+.autocomplete-dropdown {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #ccc;
+  max-height: 200px;
+  overflow-y: auto;
+  background: white;
+  position: relative;
+  z-index: 1000;
+  width: 100%;
+}
 
+.autocomplete-dropdown li {
+  padding: 8px;
+  cursor: pointer;
+}
+
+.autocomplete-dropdown li:hover {
+  background-color: #eee; /* Highlight item when hovered */
+}
