made delete all items work...i think

--- a/src/app/pages/panier/panier.component.html
+++ b/src/app/pages/panier/panier.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <h1 class="display-4">Shopping Cart</h1>
         <div class="col-2">
-            <button class="btn btn-secondary">Delete all items</button>
+            <button class="btn btn-secondary" (click)="deleteAll()">Delete all items</button>
         </div>
     </div>
 
