--- a/src/app/pages/panier/item-in-cart/item-in-cart.component.html
+++ b/src/app/pages/panier/item-in-cart/item-in-cart.component.html
@@ -4,7 +4,7 @@
             <div class="card mb-4" style="width:100%; height: auto">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img [src]="item.product.images[1]" width="200" class="img-fluid rounded-start" alt="">
+                        <img [src]="" width="200" class="img-fluid rounded-start" alt="">
                     </div>
 
                     <div class="col-md-8">
@@ -18,7 +18,7 @@
                                         <select class="form-select" [(ngModel)]="item.quantity" (change)="updateQuantity(item.id, item.quantity)"
                                             aria-label="Qty">
                                             <option [value]="0">(Delete)</option>
-                                            <option *ngFor="let qty of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]" [value]="qty">{{ qty }}</option>
+                                            <option *ngFor="let qty of [1, 2, 3, 4, 5]" [value]="qty">{{ qty }}</option>
                                         </select>
                                     </div>
                                     
@@ -26,10 +26,10 @@
 
 
                                 <div class="col-2">
-                                    <button class="btn btn-outline-danger" (click)="deleteItem('000')">Delete</button>
+                                    <button class="btn btn-outline-danger" (click)="deleteItem(item.id)">Delete</button>
                                 </div>
                                 <div class="col-2">
-                                    <button class="btn btn-outline-success">Share</button>
+                                    <button class="btn btn-outline-success" (click)="copyToClipBoard(item.id)">Share</button>
                                 </div>
 
                                 <div class="col" style="margin: 0">
