--- a/src/app/pages/panier/item-in-cart/item-in-cart.component.html
+++ b/src/app/pages/panier/item-in-cart/item-in-cart.component.html
@@ -4,12 +4,14 @@
             <div class="card mb-4" style="width:100%; height: auto">
                 <div class="row g-0">
                     <div class="col-md-4">
-                        <img [src]="" width="200" class="img-fluid rounded-start" alt="">
+                        <img src="{{item.product.images.at(0)?.url}}" style="width: 175px; height: 150px" class="card-img img-fluid rounded-start" alt="">
+
                     </div>
 
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">{{item.product.name}}</h5>
+
                             <p class="card-text">{{item.product.description}}</p>
                             <div class="row">
                                 <div class="col">
@@ -21,7 +23,7 @@
                                             <option *ngFor="let qty of [1, 2, 3, 4, 5]" [value]="qty">{{ qty }}</option>
                                         </select>
                                     </div>
-                                    
+
                                 </div>
 
 
