--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -10,13 +10,14 @@
                 <img src="assets/images/icons/three-dots.svg" alt="categoryIcon">
             </button>
 
-            <div class="input-group d-flex">
+           <div class="input-group d-flex">
                 <input class="form-control" style="--bs-border-radius: 20px; border: none" type="text"
                     placeholder="Find a product..." #txtSearch (keyup)="txtSearch.value" (keydown.enter)="searchProduct(txtSearch.value)">
                 <button class="btn" style="--bs-btn-bg: white; --bs-btn-border-radius: 20px" type="button" [routerLink]="['/search/', txtSearch.value]">
                     <img src="assets/images/icons/search.svg" alt="search_icon" style="height: 1.5em;">
                 </button>
             </div>
+
         </div>
 
         <!--Buttons top-right of page-->
@@ -24,24 +25,24 @@
             <a routerLink="/stores" class="btnIcon text-center">
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
-                        d="M7.42678 3.37302C7.90173 2.81891 8.59511 2.5 9.32492 2.5H30.6751C31.4049 2.5 32.0983 2.81891 32.5732 
-                            3.37302L39.0972 10.9843C39.6798 11.664 40 12.5296 40 13.4248V14.0625C40 17.3417 37.3417 20 34.0625 
-                            20C32.1572 20 30.4614 19.1025 29.375 17.7073C28.2886 19.1025 26.5928 20 24.6875 20C22.7822 20 
-                            21.0864 19.1025 20 17.7073C18.9136 19.1025 17.2178 20 15.3125 20C13.4072 20 11.7114 19.1025 
-                            10.625 17.7073C9.53856 19.1025 7.84284 20 5.9375 20C2.65831 20 0 17.3417 0 14.0625V13.4248C0 
-                            12.5296 0.32022 11.664 0.902788 10.9843L7.42678 3.37302ZM11.875 14.0625C11.875 15.961 13.414 
-                            17.5 15.3125 17.5C17.211 17.5 18.75 15.961 18.75 14.0625C18.75 13.3721 19.3096 12.8125 20 
-                            12.8125C20.6904 12.8125 21.25 13.3721 21.25 14.0625C21.25 15.961 22.789 17.5 24.6875 17.5C26.586 
-                            17.5 28.125 15.961 28.125 14.0625C28.125 13.3721 28.6846 12.8125 29.375 12.8125C30.0654 12.8125 
-                            30.625 13.3721 30.625 14.0625C30.625 15.961 32.164 17.5 34.0625 17.5C35.961 17.5 37.5 15.961 37.5 
-                            14.0625V13.4248C37.5 13.1264 37.3933 12.8379 37.1991 12.6113L30.6751 5H9.32492L2.80093 12.6113C2.60674 
-                            12.8379 2.5 13.1264 2.5 13.4248V14.0625C2.5 15.961 4.03902 17.5 5.9375 17.5C7.83598 17.5 9.375 15.961 9.375 
-                            14.0625C9.375 13.3721 9.93464 12.8125 10.625 12.8125C11.3154 12.8125 11.875 13.3721 11.875 14.0625ZM3.75 
-                            21.25C4.44036 21.25 5 21.8096 5 22.5V37.5H7.5V25C7.5 23.6193 8.61929 22.5 10 22.5H17.5C18.8807 
-                            22.5 20 23.6193 20 25V37.5H35V22.5C35 21.8096 35.5596 21.25 36.25 21.25C36.9404 21.25 37.5 21.8096 
-                            37.5 22.5V37.5H38.75C39.4404 37.5 40 38.0596 40 38.75C40 39.4404 39.4404 40 38.75 40H1.25C0.559644 40 0 
-                            39.4404 0 38.75C0 38.0596 0.559644 37.5 1.25 37.5H2.5V22.5C2.5 21.8096 3.05964 21.25 3.75 21.25ZM10 
-                            37.5H17.5V25H10V37.5ZM22.5 25C22.5 23.6193 23.6193 22.5 25 22.5H30C31.3807 22.5 32.5 23.6193 32.5 
+                        d="M7.42678 3.37302C7.90173 2.81891 8.59511 2.5 9.32492 2.5H30.6751C31.4049 2.5 32.0983 2.81891 32.5732
+                            3.37302L39.0972 10.9843C39.6798 11.664 40 12.5296 40 13.4248V14.0625C40 17.3417 37.3417 20 34.0625
+                            20C32.1572 20 30.4614 19.1025 29.375 17.7073C28.2886 19.1025 26.5928 20 24.6875 20C22.7822 20
+                            21.0864 19.1025 20 17.7073C18.9136 19.1025 17.2178 20 15.3125 20C13.4072 20 11.7114 19.1025
+                            10.625 17.7073C9.53856 19.1025 7.84284 20 5.9375 20C2.65831 20 0 17.3417 0 14.0625V13.4248C0
+                            12.5296 0.32022 11.664 0.902788 10.9843L7.42678 3.37302ZM11.875 14.0625C11.875 15.961 13.414
+                            17.5 15.3125 17.5C17.211 17.5 18.75 15.961 18.75 14.0625C18.75 13.3721 19.3096 12.8125 20
+                            12.8125C20.6904 12.8125 21.25 13.3721 21.25 14.0625C21.25 15.961 22.789 17.5 24.6875 17.5C26.586
+                            17.5 28.125 15.961 28.125 14.0625C28.125 13.3721 28.6846 12.8125 29.375 12.8125C30.0654 12.8125
+                            30.625 13.3721 30.625 14.0625C30.625 15.961 32.164 17.5 34.0625 17.5C35.961 17.5 37.5 15.961 37.5
+                            14.0625V13.4248C37.5 13.1264 37.3933 12.8379 37.1991 12.6113L30.6751 5H9.32492L2.80093 12.6113C2.60674
+                            12.8379 2.5 13.1264 2.5 13.4248V14.0625C2.5 15.961 4.03902 17.5 5.9375 17.5C7.83598 17.5 9.375 15.961 9.375
+                            14.0625C9.375 13.3721 9.93464 12.8125 10.625 12.8125C11.3154 12.8125 11.875 13.3721 11.875 14.0625ZM3.75
+                            21.25C4.44036 21.25 5 21.8096 5 22.5V37.5H7.5V25C7.5 23.6193 8.61929 22.5 10 22.5H17.5C18.8807
+                            22.5 20 23.6193 20 25V37.5H35V22.5C35 21.8096 35.5596 21.25 36.25 21.25C36.9404 21.25 37.5 21.8096
+                            37.5 22.5V37.5H38.75C39.4404 37.5 40 38.0596 40 38.75C40 39.4404 39.4404 40 38.75 40H1.25C0.559644 40 0
+                            39.4404 0 38.75C0 38.0596 0.559644 37.5 1.25 37.5H2.5V22.5C2.5 21.8096 3.05964 21.25 3.75 21.25ZM10
+                            37.5H17.5V25H10V37.5ZM22.5 25C22.5 23.6193 23.6193 22.5 25 22.5H30C31.3807 22.5 32.5 23.6193 32.5
                             25V32.5C32.5 33.8807 31.3807 35 30 35H25C23.6193 35 22.5 33.8807 22.5 32.5V25ZM30 25H25V32.5H30V25Z"
                         fill="" />
                 </svg>
@@ -79,12 +80,12 @@
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M0 6.25C0 5.55964 0.559644 5 1.25 5H5C5.57358 5 6.07356 5.39037 6.21268 5.94683L7.22597 10H36.25C36.6349 10 36.9984 10.1773 37.2353 10.4807C37.4721 10.7841 37.556 11.1797 37.4627 11.5532L33.7127 26.5532C33.5736 27.1096 33.0736 27.5 32.5 27.5H10C9.42642 27.5 8.92644 27.1096 8.78732 26.5532L4.02403 7.5H1.25C0.559644 7.5 0 6.94036 0 6.25ZM7.85097 12.5L10.976 25H31.524L34.649 12.5H7.85097ZM12.5 32.5C11.1193 32.5 10 33.6193 10 35C10 36.3807 11.1193 37.5 12.5 37.5C13.8807 37.5 15 36.3807 15 35C15 33.6193 13.8807 32.5 12.5 32.5ZM7.5 35C7.5 32.2386 9.73858 30 12.5 30C15.2614 30 17.5 32.2386 17.5 35C17.5 37.7614 15.2614 40 12.5 40C9.73858 40 7.5 37.7614 7.5 35ZM30 32.5C28.6193 32.5 27.5 33.6193 27.5 35C27.5 36.3807 28.6193 37.5 30 37.5C31.3807 37.5 32.5 36.3807 32.5 35C32.5 33.6193 31.3807 32.5 30 32.5ZM25 35C25 32.2386 27.2386 30 30 30C32.7614 30 35 32.2386 35 35C35 37.7614 32.7614 40 30 40C27.2386 40 25 37.7614 25 35Z"
-                        fill="" />   
+                        fill="" />
                 </svg>
                 <div class="txtIcon">Cart</div>
                 <span class="numberOfItems">{{numberOfItems}}</span>
             </a>
-            
+
         </div>
     </div>
 </nav>
@@ -147,7 +148,7 @@
 
         <!--Il nous restera a implementer le about us une fois la page fait-->
         <a routerLink="/stores" class="text-reset" data-bs-dismiss="offcanvas">Find a Store</a>
-        <a href="#!" class="text-reset" data-bs-dismiss="offcanvas">About Us</a>
+        <a href="#" class="text-reset" data-bs-dismiss="offcanvas">About Us</a>
         <a routerLink="/support" class="text-reset" data-bs-dismiss="offcanvas">Contact Us</a>
         <a routerLink="/home" data-bs-dismiss="offcanvas">
             <img src="assets/images/logo/Logo JX-HIFI.png" alt="logo jx-hifi" width="100">
