Refactor product and review handling for improved functionality
Revised product search and rating logic to enhance accuracy and performance, including asynchronous data fetching and filtering. Updated reviews to display customer first names. Integrated change detection and removed unused code for better maintainability.

--- a/src/app/pages/detail-product-jean/detail-product-child-jean/tab-detail-jean/tab-detail-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/tab-detail-jean/tab-detail-jean.component.html
@@ -25,7 +25,7 @@
     <div class="reviewSection tab-pane" id="reviews" role="tabpanel">
         <ul>
             <li *ngFor="let review of product?.reviews">
-                <p><span class="stars text-warning h4">{{reviewRating(review)}}</span>from {{review.idUser}}</p>
+                <p><span class="stars text-warning h4">{{reviewRating(review)}}</span>from {{review.customer_firstName}}</p>
                 <h4>{{review.title}}</h4>
                 <p>{{review.review}}</p>
             </li>
