--- a/src/app/moduleAdmin/pages/OrderSection/order-detail/order-detail.component.html
+++ b/src/app/moduleAdmin/pages/OrderSection/order-detail/order-detail.component.html
@@ -14,14 +14,12 @@
       <ng-template #productTemplate>
         <ul>
           <li *ngFor="let item of order.orderItems">
-            {{item.productName}} x {{item.quantity}} ${{item.sousTotal}}
-            <!-- TODO ajuster la methode si le clascul du prix est géré en back -->
-            <!-- <ng-container *ngIf="!item.product.onSale; else specialTemplate">
+            <ng-container *ngIf="!item.product.onSale; else specialTemplate">
               {{item.product.name}} - {{item.quantity}} x {{item.product.sellPrice}}$
             </ng-container>
            <ng-template #specialTemplate>
              {{item.product.name}} - {{item.quantity}} x {{item.product.specialPrice}}$
-           </ng-template> -->
+           </ng-template>
           </li>
         </ul>
       </ng-template>
