--- a/src/app/pages/panier/sub-total/sub-total.component.html
+++ b/src/app/pages/panier/sub-total/sub-total.component.html
@@ -12,8 +12,8 @@
                         <button type="button" [routerLink]="['/home']" class="btn btn-outline-primary">Continue Shopping</button>
                     </div>
 
-                    <a class="row mb-3">
-                        <button type="button" [routerLink]="['/payment-form']" class="btn btn-primary">Proceed to method of payment</button>
+                    <a type="button" (click)="onProceedToPayment()" class="btn btn-primary">
+                        Proceed to checkout
                     </a>
                 </div>
             </div>
