--- a/src/app/pages/panier/sub-total/sub-total.component.html
+++ b/src/app/pages/panier/sub-total/sub-total.component.html
@@ -11,9 +11,10 @@
                     <div class="row mb-3">
                         <button type="button" [routerLink]="['/home']" class="btn btn-outline-primary">Continue Shopping</button>
                     </div>
-
-                    <a type="button" (click)="onProceedToPayment()" class="btn btn-primary">
-                        Proceed to checkout
+                    <a class="row mb-3">
+                        <button type="button" (click)="onProceedToPayment()" class="btn btn-primary">
+                            Proceed to checkout
+                        </button>
                     </a>
                 </div>
             </div>
