--- a/src/app/pages/account-details/orders/orders.component.html
+++ b/src/app/pages/account-details/orders/orders.component.html
@@ -1,26 +1,29 @@
 <div class="container-fluid py-5">
-    <div class="col-12 col-md-10 col-lg-11">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Your orders</h1>
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>Id Order</th>
-                    <th>Number of items</th>
-                    <th>Total</th>
-                    <th>Card ending in</th>
-                    <th>Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let i of orderList">
-                    <td>{{i.id}}</td>
-                    <td>1</td>
-                    <td>${{i.totalAmount}}</td>
-                    <td>{{(i.card.cardNumber).toString().substr(12,4)}}</td>
-                    <td>{{i.status}}</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-10 col-lg-11">
+            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Your orders</h1>
+            <div class="table">
+                <table class="table table-striped table-bordered table-hover">
+                    <thead class="table">
+                        <tr>
+                            <th scope="col">Id Order</th>
+                            <th scope="col">Number of items</th>
+                            <th scope="col">Total</th>
+                            <th scope="col">Card ending in</th>
+                            <th scope="col">Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let i of orderList">
+                            <td>{{ i.id }}</td>
+                            <td>1</td>
+                            <td>${{ i.totalAmount }}</td>
+                            <td>{{ (i.card.cardNumber).toString().substr(12, 4) }}</td>
+                            <td>{{ i.status }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
-
