--- a/src/app/pages/panier/item-in-cart/item-in-cart.component.html
+++ b/src/app/pages/panier/item-in-cart/item-in-cart.component.html
@@ -1,42 +1,49 @@
 <div class="row">
     <div class="col">
-        <div class="row-card">
-            <div class="card mb-4" style="width:100%; height: auto">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="{{item.product.images.at(0)?.url}}" style="width: 175px; height: 150px" class="card-img img-fluid rounded-start" alt="">
+        <div class="card mb-4">
+            <div class="row g-0 align-items-center">
+                <!-- Product Image -->
+                <div class="col-12 col-md-4 text-center">
+                    <img src="{{item.product.images.at(0)?.url}}" class="card-img img-fluid rounded-start"
+                        alt="Product Image"
+                        class="card-img img-fluid rounded-start"   
+                    >
+                </div>
 
-                    </div>
+                <!-- Product Details -->
+                <div class="col-12 col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">{{item.product.name}}</h5>
+                        <p class="card-text">{{item.product.description}}</p>
 
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">{{item.product.name}}</h5>
-
-                            <p class="card-text">{{item.product.description}}</p>
-                            <div class="row">
-                                <div class="col">
-                                    <div class="input-group">
-                                        <span class="input-group-text" id="basic-addon1">Qty:</span>
-                                        <select class="form-select" [(ngModel)]="item.quantity" (change)="updateQuantity(item.id, item.quantity)"
-                                            aria-label="Qty">
-                                            <option [value]="0">(Delete)</option>
-                                            <option *ngFor="let qty of [1, 2, 3, 4, 5]" [value]="qty">{{ qty }}</option>
-                                        </select>
-                                    </div>
-
+                        <div class="row align-items-center gy-3">
+                            <!-- Quantity Selector -->
+                            <div class="col-12 col-md-6">
+                                <div class="input-group">
+                                    <span class="input-group-text">Qty:</span>
+                                    <select class="form-select" [(ngModel)]="item.quantity"
+                                        (change)="updateQuantity(item.id, item.quantity)" aria-label="Quantity">
+                                        <option [value]="0">(Delete)</option>
+                                        <option *ngFor="let qty of [1, 2, 3, 4, 5]" [value]="qty">{{ qty }}</option>
+                                    </select>
                                 </div>
+                            </div>
 
+                            <!-- Delete Button -->
+                            <div class="col-6 col-md-3 text-center">
+                                <button class="btn btn-outline-danger w-100"
+                                    (click)="deleteItem(item.id)">Delete</button>
+                            </div>
 
-                                <div class="col-2">
-                                    <button class="btn btn-outline-danger" (click)="deleteItem(item.id)">Delete</button>
-                                </div>
-                                <div class="col-2">
-                                    <button class="btn btn-outline-success" (click)="copyToClipBoard(item.id)">Share</button>
-                                </div>
+                            <!-- Share Button -->
+                            <div class="col-6 col-md-3 text-center">
+                                <button class="btn btn-outline-success w-100"
+                                    (click)="copyToClipBoard(item.id)">Share</button>
+                            </div>
 
-                                <div class="col" style="margin: 0">
-                                    <label><strong>${{item.quantity*item.subTotal}}</strong></label>
-                                </div>
+                            <!-- Total Price -->
+                            <div class="col-12 text-end">
+                                <label class="fw-bold">${{item.quantity * item.subTotal}}</label>
                             </div>
                         </div>
                     </div>
@@ -45,4 +52,3 @@
         </div>
     </div>
 </div>
-<!---->
