--- a/src/app/pages/panier/panier.component.html
+++ b/src/app/pages/panier/panier.component.html
@@ -1,31 +1,35 @@
 <div class="container">
+     <div class="row">
+        <div class="row align-items-center mb-4">
+            <div class="col-12 col-md-8">
+                <h1 class="display-4">Shopping Cart</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-3 col-lg-3 col-xl-3 text-center">
+                <button class="btn btn-secondary w-100 w-md-auto" (click)="deleteAll()">Delete all items</button>
+            </div>
+        </div>
+    </div>
+    <br>
+
+  
     <div class="row">
-        <h1 class="display-4">Shopping Cart</h1>
-        <div class="col-2">
-            <button class="btn btn-secondary" (click)="deleteAll()">Delete all items</button>
+        <div class="col-12 col-lg-8 mb-4">
+            <app-item-in-cart *ngFor="let i of orderitem" [item]="i">
+            </app-item-in-cart>
+        </div>
+
+        <div class="col-12 col-lg-4">
+            <app-sub-total></app-sub-total>
         </div>
     </div>
 
-    <br>
     <div class="row">
-            <div class="col-8">
-                <app-item-in-cart
-                *ngFor="let i of orderitem"
-                [item]="i"
-                ></app-item-in-cart>
-                
-            </div>
-            
-            <div class="col-4">
-                <app-sub-total></app-sub-total>
-                <!--THIS SHOULD BE THE AUTO GENERATION OF THE SUBTOTAL-->
-            </div>
+        <div class="col-12">
+            <app-coupon-code></app-coupon-code>
+        </div>
     </div>
 
-
-    <div class="row">
-        <app-coupon-code></app-coupon-code>
-        <!--HERE THERE SHOULD BE THE ROW WITH THE SUBTOTAL COMPONENT-->
-    </div>
     <router-outlet></router-outlet>
 </div>
