jai tenter de faire afficher le sous total, no success

--- a/src/app/pages/panier/coupon-code/coupon-code.component.html
+++ b/src/app/pages/panier/coupon-code/coupon-code.component.html
@@ -1,20 +1,12 @@
-<div class="col-9">
+<div class="col-12 col-md-9">
     <div class="col" id="title-Row">
-
-
-        <div class="row">
-            <div class="col">
+        <div class="row justify-content-start">
+            <div class="col-12 col-md-8 col-lg-6">
                 <div class="input-group">
-                    <input placeholder="Coupon Code" type="text" class="form form-control" style="width: 350px;">
+                    <input placeholder="Coupon Code" type="text" class="form-control" aria-label="Coupon Code" />
                     <button type="button" class="btn btn-primary">Use Code</button>
                 </div>
-            </div>
-         
-            <div class="col">
-                <!--probab utiliser un Ngif ici pour l'affichage du sous-total-->
-                <label><strong>Subtotal:</strong></label>
             </div>
         </div>
     </div>
 </div>
-
